Refactoring, shading model, cleanups

--- a/JollySamurai.UnrealEngine4.T3D.csproj
+++ b/JollySamurai.UnrealEngine4.T3D.csproj
@@ -53,19 +53,21 @@
     <Compile Include="Material\MaterialExpressionTextureCoordinate.cs" />
     <Compile Include="Material\MaterialExpressionTextureSampleParameter2D.cs" />
     <Compile Include="Material\MaterialExpressionVectorParameter.cs" />
+    <Compile Include="Material\ParameterNode.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Parser\ParsedDocument.cs" />
     <Compile Include="Parser\ParsedNode.cs" />
     <Compile Include="Parser\ParsedNodeBag.cs" />
     <Compile Include="Parser\ParsedProperty.cs" />
     <Compile Include="Parser\ParsedPropertyBag.cs" />
-    <Compile Include="Parser\Parser.cs" />
+    <Compile Include="Parser\DocumentParser.cs" />
     <Compile Include="Processor\DocumentProcessor.cs" />
     <Compile Include="Processor\NodeProcessor.cs" />
     <Compile Include="Processor\PropertyDataType.cs" />
     <Compile Include="Processor\PropertyDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SamplerType.cs" />
+    <Compile Include="ShadingModel.cs" />
     <Compile Include="TextureReference.cs" />
     <Compile Include="UnresolvedExpressionReference.cs" />
     <Compile Include="ValueUtil.cs" />
