--- a/JollySamurai.UnrealEngine4.T3D.csproj
+++ b/JollySamurai.UnrealEngine4.T3D.csproj
@@ -38,6 +38,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exception\ParserException.cs" />
+    <Compile Include="Exception\T3DException.cs" />
+    <Compile Include="Exception\ValueException.cs" />
     <Compile Include="FunctionReference.cs" />
     <Compile Include="Material\Material.cs" />
     <Compile Include="Material\MaterialDocumentProcessor.cs" />
@@ -63,6 +66,7 @@
     <Compile Include="Parser\DocumentParser.cs" />
     <Compile Include="Processor\DocumentProcessor.cs" />
     <Compile Include="Processor\NodeProcessor.cs" />
+    <Compile Include="Processor\Problem.cs" />
     <Compile Include="Processor\PropertyDataType.cs" />
     <Compile Include="Processor\PropertyDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
