Initial support for material instances

--- a/JollySamurai.UnrealEngine4.T3D.csproj
+++ b/JollySamurai.UnrealEngine4.T3D.csproj
@@ -42,6 +42,8 @@
     <Compile Include="Exception\T3DException.cs" />
     <Compile Include="Exception\ValueException.cs" />
     <Compile Include="FunctionReference.cs" />
+    <Compile Include="MaterialInstance\MaterialInstanceDocumentProcessor.cs" />
+    <Compile Include="MaterialInstance\MaterialInstance.cs" />
     <Compile Include="Material\Material.cs" />
     <Compile Include="Material\MaterialDocumentProcessor.cs" />
     <Compile Include="Material\MaterialExpressionAdd.cs" />
