--- a/JollySamurai.UnrealEngine4.T3D.csproj
+++ b/JollySamurai.UnrealEngine4.T3D.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Material\MaterialExpressionClamp.cs" />
     <Compile Include="Material\MaterialExpressionComment.cs" />
     <Compile Include="Material\MaterialExpressionDesaturation.cs" />
+    <Compile Include="Material\MaterialExpressionFresnel.cs" />
     <Compile Include="Material\MaterialExpressionLinearInterpolate.cs" />
     <Compile Include="Material\MaterialExpressionMaterialFunctionCall.cs" />
     <Compile Include="Material\MaterialExpressionMultiply.cs" />
