--- a/JollySamurai.UnrealEngine4.T3D.csproj
+++ b/JollySamurai.UnrealEngine4.T3D.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Material\MaterialExpressionConstant.cs" />
     <Compile Include="Material\MaterialExpressionConstant2Vector.cs" />
     <Compile Include="Material\MaterialExpressionConstant4Vector.cs" />
+    <Compile Include="Material\MaterialExpressionDivide.cs" />
     <Compile Include="Material\MaterialExpressionOneMinus.cs" />
     <Compile Include="Material\MaterialExpressionSubtract.cs" />
     <Compile Include="Material\MaterialExpressionTextureObjectParameter.cs" />
