--- a/JollySamurai.UnrealEngine4.T3D.csproj
+++ b/JollySamurai.UnrealEngine4.T3D.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Material\MaterialExpressionOneMinus.cs" />
     <Compile Include="Material\MaterialExpressionSine.cs" />
     <Compile Include="Material\MaterialExpressionSubtract.cs" />
+    <Compile Include="Material\MaterialExpressionTextureObject.cs" />
     <Compile Include="Material\MaterialExpressionTextureObjectParameter.cs" />
     <Compile Include="Material\MaterialExpressionTextureSample.cs" />
     <Compile Include="Material\MaterialExpressionTime.cs" />
