--- a/JollySamurai.UnrealEngine4.T3D.csproj
+++ b/JollySamurai.UnrealEngine4.T3D.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Material\MaterialExpressionConstant4Vector.cs" />
     <Compile Include="Material\MaterialExpressionDivide.cs" />
     <Compile Include="Material\MaterialExpressionOneMinus.cs" />
+    <Compile Include="Material\MaterialExpressionPower.cs" />
     <Compile Include="Material\MaterialExpressionSine.cs" />
     <Compile Include="Material\MaterialExpressionSubtract.cs" />
     <Compile Include="Material\MaterialExpressionTextureObject.cs" />
