--- a/JollySamurai.UnrealEngine4.T3D.csproj
+++ b/JollySamurai.UnrealEngine4.T3D.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Material\MaterialExpressionDivide.cs" />
     <Compile Include="Material\MaterialExpressionFrac.cs" />
     <Compile Include="Material\MaterialExpressionOneMinus.cs" />
+    <Compile Include="Material\MaterialExpressionPanner.cs" />
     <Compile Include="Material\MaterialExpressionPower.cs" />
     <Compile Include="Material\MaterialExpressionSine.cs" />
     <Compile Include="Material\MaterialExpressionSubtract.cs" />
