Added IMobility for movable components

--- a/JollySamurai.UnrealEngine4.T3D.csproj
+++ b/JollySamurai.UnrealEngine4.T3D.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Map\BaseActorNodeProcessor.cs" />
     <Compile Include="Map\BaseComponentProcessor.cs" />
     <Compile Include="Map\ILocation.cs" />
+    <Compile Include="Map\IMobility.cs" />
     <Compile Include="Map\IRotation.cs" />
     <Compile Include="Map\IScale3D.cs" />
     <Compile Include="Map\Level.cs" />
