--- a/JollySamurai.UnrealEngine4.T3D.csproj
+++ b/JollySamurai.UnrealEngine4.T3D.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Map\MapDocumentProcessor.cs" />
     <Compile Include="Map\PointLightActor.cs" />
     <Compile Include="Map\PointLightComponent.cs" />
+    <Compile Include="Map\SphereReflectionCaptureActor.cs" />
+    <Compile Include="Map\SphereReflectionCaptureComponent.cs" />
     <Compile Include="Map\SpotLightActor.cs" />
     <Compile Include="Map\SpotLightComponent.cs" />
     <Compile Include="Map\StaticMeshActor.cs" />
@@ -113,6 +115,7 @@
     <Compile Include="Processor\PropertyDataType.cs" />
     <Compile Include="Processor\PropertyDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReflectionSourceType.cs" />
     <Compile Include="Rotator.cs" />
     <Compile Include="SamplerType.cs" />
     <Compile Include="ShadingModel.cs" />
