--- a/JollySamurai.UnrealEngine4.T3D.csproj
+++ b/JollySamurai.UnrealEngine4.T3D.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Material\MaterialExpressionPower.cs" />
     <Compile Include="Material\MaterialExpressionSine.cs" />
     <Compile Include="Material\MaterialExpressionStaticBoolParameter.cs" />
+    <Compile Include="Material\MaterialExpressionStaticSwitch.cs" />
     <Compile Include="Material\MaterialExpressionSubtract.cs" />
     <Compile Include="Material\MaterialExpressionTextureObject.cs" />
     <Compile Include="Material\MaterialExpressionTextureObjectParameter.cs" />
