Added many new nodes

--- a/JollySamurai.UnrealEngine4.T3D.csproj
+++ b/JollySamurai.UnrealEngine4.T3D.csproj
@@ -73,16 +73,30 @@
     <Compile Include="MaterialDomain.cs" />
     <Compile Include="MaterialInstance\MaterialInstanceDocumentProcessor.cs" />
     <Compile Include="MaterialInstance\MaterialInstance.cs" />
+    <Compile Include="Material\MaterialExpressionAbs.cs" />
+    <Compile Include="Material\MaterialExpressionCameraPositionWS.cs" />
     <Compile Include="Material\MaterialExpressionComponentMask.cs" />
     <Compile Include="Material\MaterialExpressionConstant.cs" />
     <Compile Include="Material\MaterialExpressionConstant2Vector.cs" />
     <Compile Include="Material\MaterialExpressionConstant4Vector.cs" />
+    <Compile Include="Material\MaterialExpressionCrossProduct.cs" />
     <Compile Include="Material\MaterialExpressionDepthFade.cs" />
+    <Compile Include="Material\MaterialExpressionDistance.cs" />
     <Compile Include="Material\MaterialExpressionDivide.cs" />
+    <Compile Include="Material\MaterialExpressionDotProduct.cs" />
+    <Compile Include="Material\MaterialExpressionFloor.cs" />
     <Compile Include="Material\MaterialExpressionFrac.cs" />
+    <Compile Include="Material\MaterialExpressionNormalize.cs" />
     <Compile Include="Material\MaterialExpressionOneMinus.cs" />
     <Compile Include="Material\MaterialExpressionPanner.cs" />
+    <Compile Include="Material\MaterialExpressionParticleColor.cs" />
+    <Compile Include="Material\MaterialExpressionPixelDepth.cs" />
+    <Compile Include="Material\MaterialExpressionParticleSize.cs" />
     <Compile Include="Material\MaterialExpressionPower.cs" />
+    <Compile Include="Material\MaterialExpressionRotateAboutAxis.cs" />
+    <Compile Include="Material\MaterialExpressionSceneDepth.cs" />
+    <Compile Include="Material\MaterialExpressionSceneTexture.cs" />
+    <Compile Include="Material\MaterialExpressionScreenPosition.cs" />
     <Compile Include="Material\MaterialExpressionSine.cs" />
     <Compile Include="Material\MaterialExpressionStaticBoolParameter.cs" />
     <Compile Include="Material\MaterialExpressionStaticSwitch.cs" />
@@ -91,7 +105,9 @@
     <Compile Include="Material\MaterialExpressionTextureObjectParameter.cs" />
     <Compile Include="Material\MaterialExpressionTextureSample.cs" />
     <Compile Include="Material\MaterialExpressionTime.cs" />
+    <Compile Include="Material\MaterialExpressionVertexColor.cs" />
     <Compile Include="Material\MaterialExpressionVertexNormalWS.cs" />
+    <Compile Include="Material\MaterialExpressionWorldPosition.cs" />
     <Compile Include="Material\MaterialNode.cs" />
     <Compile Include="Material\VectorConstantNode.cs" />
     <Compile Include="Material\Material.cs" />
