--- a/JollySamurai.UnrealEngine4.T3D.csproj
+++ b/JollySamurai.UnrealEngine4.T3D.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Map\BaseComponentProcessor.cs" />
     <Compile Include="Map\DecalActor.cs" />
     <Compile Include="Map\DecalComponent.cs" />
+    <Compile Include="Map\DirectionalLightActor.cs" />
+    <Compile Include="Map\DirectionalLightComponent.cs" />
     <Compile Include="Map\ExponentialHeightFog.cs" />
     <Compile Include="Map\ExponentialHeightFogComponent.cs" />
     <Compile Include="Map\ILocation.cs" />
@@ -80,6 +82,8 @@
     <Compile Include="Material\MaterialExpressionConstant2Vector.cs" />
     <Compile Include="Material\MaterialExpressionConstant4Vector.cs" />
     <Compile Include="Material\MaterialExpressionCrossProduct.cs" />
+    <Compile Include="Material\MaterialExpressionDDX.cs" />
+    <Compile Include="Material\MaterialExpressionDDY.cs" />
     <Compile Include="Material\MaterialExpressionDepthFade.cs" />
     <Compile Include="Material\MaterialExpressionDistance.cs" />
     <Compile Include="Material\MaterialExpressionDivide.cs" />
@@ -105,6 +109,7 @@
     <Compile Include="Material\MaterialExpressionTextureObjectParameter.cs" />
     <Compile Include="Material\MaterialExpressionTextureSample.cs" />
     <Compile Include="Material\MaterialExpressionTime.cs" />
+    <Compile Include="Material\MaterialExpressionTransform.cs" />
     <Compile Include="Material\MaterialExpressionVertexColor.cs" />
     <Compile Include="Material\MaterialExpressionVertexNormalWS.cs" />
     <Compile Include="Material\MaterialExpressionWorldPosition.cs" />
